--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest package="com.ashishdas.fileuploader.sample"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +19,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <receiver android:name=".MainActivity$MyFileUploadStatusReceiver" >
+            <intent-filter>
+                <action android:name="com.ashishdas.fileuploader.ACTION_BROAD_CAST" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
