Updated the sample app

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".MainActivity$MyFileUploadStatusReceiver" >
+        <receiver android:name=".MyFileUploadStatusReceiver" >
             <intent-filter>
                 <action android:name="com.ashishdas.fileuploader.ACTION_BROAD_CAST" />
             </intent-filter>
